enh: further layout and visual improvements, fixing possible overflow issues on layout and aoc index pages, as well as recoloring the codebox.

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -14,7 +14,12 @@
   }
   h2 {
     @apply text-xl;
-    @apply mb-1;
+    @apply mb-3;
+    font-family: 'Roboto Serif', serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-variation-settings: 'wdth' 100, 'GRAD' 0;
   }
   ul {
     @apply list-disc;
@@ -42,7 +47,7 @@
 
   .adventofcode h2 {
     @apply text-xl;
-    @apply mb-1;
+    @apply mb-3;
     @apply text-chicFive;
   }
 
